--- a/app/src/css/body.css
+++ b/app/src/css/body.css
@@ -108,6 +108,10 @@ body {
   color: white !important;
 }
 
+.p-datatable .p-paginator .p-dropdown .p-dropdown-label {
+  background: #9c27b0 !important;
+}
+
 .p-autocomplete-dd .p-autocomplete-dropdown {
   background: #9c27b0 !important;
   color: white !important;
@@ -123,6 +127,35 @@ body {
   background-color: #3e4045;
 }
 
+/* Dropdown */
+.p-dropdown .p-dropdown-trigger {
+  background: #9c27b0 !important;
+  color: white !important;
+}
+
+.p-dropdown-panel .p-dropdown-items {
+  background-color: #3b3b3b;
+}
+
+.p-dropdown-panel .p-dropdown-items .p-dropdown-item {
+  color: white !important;
+}
+
+.p-dropdown-panel .p-dropdown-items .p-dropdown-item:hover {
+  color: black !important;
+}
+
+.p-dropdown-panel .p-dropdown-items .p-dropdown-item.p-highlight {
+  background: #55585f !important;
+  color: white !important;
+}
+
+.p-fluid .p-dropdown {
+  color: white;
+  background-color: #3e4045;
+}
+
+/* Autocomplete */
 .p-autocomplete-panel .p-autocomplete-items {
   background: #3b3b3b !important;
 }
@@ -180,4 +213,41 @@ body {
 
 .pi-plus:before {
   color: #9c27b0;
+}
+
+/* Excluir Dialog */
+.p-dialog-draggable .p-dialog-header {
+  background: #3b3b3b !important;
+  color: white !important;
+}
+
+.p-confirm-dialog .p-dialog-content {
+  background: #3b3b3b !important;
+  color: white !important;
+}
+
+.p-dialog .p-dialog-footer {
+  background: #3b3b3b !important;
+  color: white !important;
+}
+
+/* Data picker */
+
+.p-datepicker:not(.p-datepicker-inline) {
+  background: #3b3b3b !important;
+  color: white !important;
+}
+
+.p-datepicker:not(.p-datepicker-inline) .p-datepicker-header {
+  background: #3b3b3b !important;
+  color: white !important;
+}
+
+.p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-month {
+  color: white !important;
+}
+
+.p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-year,
+.p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-month {
+  color: white !important;
 }
