:zap: manutenção de denúncias e comentários

--- a/app/src/css/form.css
+++ b/app/src/css/form.css
@@ -3,6 +3,11 @@
   font-family: "sans-serif";
 }
 
+.menuBarTitle {
+  margin-top: 5%;
+  color: white;
+}
+
 .genericFormImput {
   color: white;
   background-color: #3e4045;
