--- a/app/src/css/body.css
+++ b/app/src/css/body.css
@@ -6,6 +6,11 @@ a {
   text-decoration: none;
 }
 
+/* Oculta a scrollbar */
+::-webkit-scrollbar {
+  width: 0px;
+}
+
 .img_404 {
   margin-top: 2%;
   margin-left: 30%;
