:zap: listagem de promoções na interface de usuário

--- a/app/src/css/body.css
+++ b/app/src/css/body.css
@@ -29,7 +29,7 @@ input:-webkit-autofill {
 }
 
 .mainColor {
-  color: #9c27b0;
+  color: #733ac8;
 }
 
 .title {
@@ -61,20 +61,92 @@ input:-webkit-autofill {
 }
 
 .pi-home:before {
-  color: #9c27b0;
+  color: #733ac8;
 }
 
-.pi-file:before {
-  color: gray;
+/* .pi-file:before {
+  color: #733ac8;
 }
 
 .pi-question-circle:before {
-  color: gray;
+  color: #733ac8;
 }
 
 .pi-power-off:before {
-  color: gray;
+  color: #733ac8;
 }
+
+.pi-star:before {
+  color: #733ac8 !important;
+}
+
+.pi-inbox:before {
+  color: #733ac8 !important;
+}
+
+.pi-check:before {
+  color: #733ac8 !important;
+}
+
+.pi-user:before {
+  color: #733ac8 !important;
+}
+
+.pi-shopping-bag:before {
+  color: #733ac8 !important;
+}
+
+.pi-wallet:before {
+  color: #733ac8 !important;
+}
+
+.pi-exclamation-triangle:before {
+  color: #733ac8 !important;
+}
+
+.pi-comments:before {
+  color: #733ac8 !important;
+}
+
+.pi-clock:before {
+  color: #733ac8 !important;
+}
+
+.pi-ban:before {
+  color: #733ac8 !important;
+}
+
+.pi-bolt:before {
+  color: #733ac8 !important;
+}
+
+.pi-building:before {
+  color: #733ac8 !important;
+}
+
+.pi-tags:before {
+  color: #733ac8 !important;
+}
+
+.pi-ticket:before {
+  color: #733ac8 !important;
+}
+
+.pi-book:before {
+  color: #733ac8 !important;
+}
+
+.pi-shopping-cart:before {
+  color: #733ac8 !important;
+}
+
+.pi-shield:before {
+  color: #733ac8 !important;
+}
+
+.pi-car:before {
+  color: #733ac8 !important;
+} */
 
 .p-datatable .p-datatable-tbody > tr > td {
   background: #3b3b3b !important;
@@ -120,8 +192,8 @@ input:-webkit-autofill {
 }
 
 .p-datatable .p-paginator .p-button.p-button-icon-only {
-  color: #9c27b0 !important;
-  border: 1px solid #9c27b0 !important;
+  color: #733ac8 !important;
+  border: 1px solid #733ac8 !important;
 }
 
 .p-datatable .p-sortable-column .p-sortable-column-icon {
@@ -129,16 +201,16 @@ input:-webkit-autofill {
 }
 
 .p-datatable .p-paginator .p-dropdown .p-dropdown-label {
-  background: #9c27b0 !important;
+  background: #733ac8 !important;
 }
 
 .p-autocomplete-dd .p-autocomplete-dropdown {
-  background: #9c27b0 !important;
+  background: #733ac8 !important;
   color: white !important;
 }
 
 .p-calendar-w-btn-right .p-datepicker-trigger {
-  background: #9c27b0 !important;
+  background: #733ac8 !important;
   color: white !important;
 }
 
@@ -149,7 +221,7 @@ input:-webkit-autofill {
 
 /* Dropdown */
 .p-dropdown .p-dropdown-trigger {
-  background: #9c27b0 !important;
+  background: #733ac8 !important;
   color: white !important;
 }
 
@@ -211,7 +283,7 @@ input:-webkit-autofill {
 
 .p-column-filter-buttonbar .p-button:not(.p-button-icon-only) {
   background: #3b3b3b !important;
-  border: 1px solid #9c27b0 !important;
+  border: 1px solid #733ac8 !important;
   color: white;
 }
 
@@ -221,8 +293,8 @@ input:-webkit-autofill {
 }
 
 .p-column-filter-buttonbar .p-button:not(.p-button-icon-only):hover {
-  background: #9c27b0 !important;
-  border: 1px solid #9c27b0 !important;
+  background: #733ac8 !important;
+  border: 1px solid #733ac8 !important;
   color: white;
 }
 
@@ -232,7 +304,7 @@ input:-webkit-autofill {
 }
 
 .pi-plus:before {
-  color: #9c27b0;
+  color: #733ac8;
 }
 
 /* Excluir Dialog */
@@ -279,4 +351,23 @@ input:-webkit-autofill {
 
 .p-password-meter {
   background: #545760 !important;
+}
+
+.p-menubar .p-menuitem.p-menuitem-active > .p-menuitem-link {
+  background: #3b3b3b !important;
+}
+
+.p-menubar .p-menuitem-link .p-menuitem-text {
+  color: white !important;
+}
+
+.p-menubar .p-submenu-list {
+  background: #545760 !important;
+}
+
+.p-menubar
+  .p-menubar-root-list
+  > .p-menuitem
+  > .p-menuitem-link:not(.p-disabled):hover {
+  background: #3b3b3b !important;
 }
