:zap: sugestão e denúncia de promoção para usuário comum

--- a/app_user/src/css/form.css
+++ b/app_user/src/css/form.css
@@ -4,11 +4,17 @@
 }
 
 .menuBarTitle {
-  margin-top: 5%;
+  margin-top: 7%;
   color: white;
 }
 
 .genericFormImput {
   color: white;
   background-color: #3e4045;
+}
+
+.genericParagraph {
+  color: white;
+  font-family: "Inter", sans-serif;
+  text-align: center;
 }
