--- a/app_user/src/css/body.css
+++ b/app_user/src/css/body.css
@@ -6,6 +6,16 @@ a {
   text-decoration: none;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: white;
+  font-family: "Inter", sans-serif;
+}
+
 /* Corrigir cores do autocomplete do navegador */
 /* input:-webkit-autofill,
 input:-webkit-autofill:hover,
